upload de formularios compelta

--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -79,7 +79,7 @@
 	<!--inicio botão visualizar formulário-->
 	 <div class="container">
 
-		 <a href="forms_visualizar.html"><div class="row" style="background-color: #30566B; border-radius: 20px;">
+		 <a href="src formulario visualizar/forms_upload.html"><div class="row" style="background-color: #30566B; border-radius: 20px;">
 			 <div class="col s4 ">
 				 <img class="imagens responsive-img left-align" style="display: block;
 				 margin-left: auto;
