--- a/src formulario concluido/forms_conclusao2.html
+++ b/src formulario concluido/forms_conclusao2.html
@@ -36,7 +36,7 @@
 		  <div class="col s6">
 				<a href="../formulario.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="display: block;
 				  margin-left: auto;
-				  margin-right: auto;">Voltar ao início</button></a>
+				  margin-right: auto;border-style:double; border-color: #30566B; background-color: white; color: #30566B;">Voltar ao início</button></a>
 		  </div>
 		  <div class="col s6 ">
 			<a href="../src formulario concluido/forms_resultado.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="display: block;
