--- a/src formulario concluido/forms_resultado.html
+++ b/src formulario concluido/forms_resultado.html
@@ -25,25 +25,42 @@
 	  <div class="row">
 
 	  	<div class="col s12 ">
-	      	<h2>BASFI- Espondilite Anquilosante </h2>
+	      	<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">BASFI- Espondilite <p>Anquilosante</p> </h2>
 	    </div>
-	    <div class="col s12 ">
-	      	<p><b>Paciente:</b> Antônio Carlos da Silva</p>
-	    </div>
-
-	    <div class="col s6 ">
-	      	<p><b>Pontuação:</b> 4 pontos</p>
-	    </div>
-
-	    <div class="col s12 ">
-	      	<p><b>Explicação do Resultado:</b> Pontuação obtida a partir da média aritmética dos valores, variando entre 0 e 10.</p>
-	    </div>
-
-	    <div class="col s12 ">
-	      	<a href="../formulario.html"><button>Voltar ao início</button></a>
-	    </div>
-
 	  </div>
+		<div class="row">
+	    <div class="col s12 ">
+			<p style="font-size: 30px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 10%;"><b style="font-size: 45px; color: #323B43; margin-bottom: 16px; font-style: bold;
+				font-family: 'Exo 2-Semi';
+				text-align: left;
+				padding: 24px 0;">Paciente:</b> Antônio Carlos da Silva</p>
+	    </div>
+</div>
+<div class="row">
+	    <div class="col s6 ">
+	      	<p style="font-size: 30px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 10%;"><b style="font-size: 45px; color: #323B43; margin-bottom: 16px; font-style: bold;
+				font-family: 'Exo 2-Semi';
+				text-align: left;
+				padding: 24px 0;">Pontuação:</b> 4 pontos</p>
+	    </div>
+</div>
+<div class="row">
+
+	    <div class="col s12 ">
+			<p style="font-size: 30px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 8%;"><b style="font-size: 45px; color: #323B43; margin-bottom: 16px; font-style: bold;
+				font-family: 'Exo 2-Semi';
+				text-align: left;
+				padding: 24px 0;">Explicação do Resultado:</b> <p style="font-size: 30px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"> Pontuação obtida a partir da média aritmética dos valores, variando entre 0 e 10.</p></p>
+	    </div>
+	  </div>
+<div class="row">
+	    <div class="col s12 ">
+	      	<a href="../formulario.html"><button class="avanar valign-text-middle exo2-bold-white-16px" style="display: block;
+				margin-left: auto;
+				margin-right: auto; margin-top: 15%;">Voltar ao início</button></a>
+	    </div>
+</div>
+</div>
 	</div>
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
