--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  </div>
 
 	  <div class="row" id="container3">
-	  	<a href="src formulario aplicar/forms_Aplicar.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
+	  	<a href="formulario.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
 	  		<div class="col s4 ">
 	  			<img class="imagens responsive-img left-align" style="display: block;
 				  margin-left: auto;
@@ -56,7 +56,7 @@
 	  </div>
 
 	  	<div class="row">
-			<a href="forms_visualizar.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
+			<a href=""><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
 				<div class="col s4 ">
 					<img class="imagens responsive-img left-align" style="display: block;
 					margin-left: auto;
