--- a/src formulario visualizar/forms_visualizar.html
+++ b/src formulario visualizar/forms_visualizar.html
@@ -21,39 +21,45 @@
 	<!--inicio barra de pesquisa-->
 	<div class="container">
 		<div class="row">
-			<div class="col s6 barra-busca">
-				<h6>Busca por área</h6>
-					<div class="input-field col s12">
-						<select >
+			<div class="col s10 barra-busca" style="border-bottom-left-radius: 20px; border-top-left-radius: 20px;">
+				<h6 style="margin-left: 5%;">Busca por área</h6>
+					<div class="input-field col s12" style="background-color: #EBF0F1;
+					border-radius: 7px; width: 90%; margin-left: 5%; height: 50px;">
+						<select>
 							<option value="" disabled selected>Toque para ver filtros</option>
 							<option value="1">Área</option>
 							<option value="2">Data de aplicação</option>
 							<option value="3">Local de trabalho</option>
 							<option value="4">Paciente</option>
 						</select>
-						<label>Filtros</label>
 					</div>
 			</div>
 
-			<div class="col s6 barra-busca">
-				<a class="waves-effect waves-light btn"><i class="material-icons left">search</i></a>
+			<div class="col s2 barra-busca" style="border-bottom-right-radius: 20px; border-top-right-radius: 20px;">
+				<a class="waves-effect waves-light btn"style="position:relative !important;
+				top: 85%;
+				transform: translateY(-85%); border-radius: 10px; height: 50px;"><img class="material-icons left" src="../assets/filter.svg" style="width: 200%;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);"></a>
 			</div>
 		</div>
 		<!--fim barra de pesquisa-->
 		<!--inicio categorias-->
 		<div class="row">
-			<h6>Antônio Carlos da Silva</h6>
-			<div class="col s6 categorias" style="display: inline-block">
-				<h6 style="display: inline-block">BASFI- Espondilite Anquilosante</h6>
+			<h6 style="margin-top: 10%; font-size: 48px;">Antônio Carlos da Silva</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
+				<h6 style="display: inline-block;  color: white; font-size: 48px; font-family: 'Exo 2-Medium';">BASFI- Espondilite Anquilosante</h6>
 			</div>
 		</div>
 
-		<a href="forms_respostas_pelvica.html"><div class="row">
-			<h6>Dávila Fernandes</h6>
-			<div class="col s6 categorias" style="display: inline-block">
-				<h6 style="display: inline-block">Questionário de Impacto no Assoalho Pélvico</h6>
-			</div>
-		</div></a>
+		<div class="row">
+			<h6 style="margin-top: 10%; font-size: 48px;">Dávila Fernandes</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
+				<a href="forms_respostas_pelvica.html">
+				<h6 style="display: inline-block; color: white; font-size: 48px; font-family: 'Exo 2-Medium';">Questionário de Impacto no Assoalho Pélvico</h6>
+			</a></div>
+		</div>
 		<!--fim categorias-->
 	</div>
 </body>
