--- a/src formulario visualizar/forms_upload.html
+++ b/src formulario visualizar/forms_upload.html
@@ -21,42 +21,47 @@
 	<!--inicio barra de pesquisa-->
 	<div class="container">
 		<div class="row">
-			<div class="col s6 barra-busca">
-				<h6>Filtro</h6>
-					<div class="input-field col s12">
-						<select >
+			<div class="col s10 barra-busca" style="border-bottom-left-radius: 20px; border-top-left-radius: 20px;">
+				<h6 style="margin-left: 5%;">Filtros</h6>
+					<div class="input-field col s12" style="background-color: #EBF0F1;
+					border-radius: 7px; width: 90%; margin-left: 5%; height: 50px;">
+						<select>
 							<option value="" disabled selected>Toque para ver filtros</option>
 							<option value="1">Área</option>
 							<option value="2">Data de aplicação</option>
 							<option value="3">Local de trabalho</option>
 							<option value="4">Paciente</option>
 						</select>
-						<label>Filtros</label>
 					</div>
 			</div>
 
-			<div class="col s6 barra-busca">
-				<a class="waves-effect waves-light btn"><i class="material-icons left">search</i></a>
+			<div class="col s2 barra-busca" style="border-bottom-right-radius: 20px; border-top-right-radius: 20px;">
+				<a class="waves-effect waves-light btn"style="position:relative !important;
+				top: 85%;
+				transform: translateY(-85%); border-radius: 10px; height: 50px;"><img class="material-icons left" src="../assets/filter.svg" style="width: 200%;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);"></a>
 			</div>
 		</div>
 		<!--fim barra de pesquisa-->
 		<div class="row">
 			<div class="col s12">
-				<p>Ao fazer Upload do arquivo para a núvem, ele será exluido do seu dispositivo</p>
+				<p style="font-family: 'Exo 2-Regular'; font-size: 30px; color: #899199; text-align: center;">Ao fazer Upload do arquivo para a núvem, ele será excluído do seu dispositivo</p>
 			</div>
 		</div>
 		<!--inicio categorias-->
 		<div class="row">
-			<h6>Davila Fernandes</h6>
-			<div class="col s6 categorias" style="display: inline-block">
-				<h6 style="display: inline-block">Avaliação da Capacidade Funcional</h6>
+			<h6 style="margin-top: 10%; font-size: 48px;">Davila Fernandes</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
+				<h6 style="display: inline-block; color: white; font-size: 48px; font-family: 'Exo 2-Medium';">Avaliação da Capacidade Funcional</h6>
 				<img src="../assets/icon_upload.png" style="width: 9%; margin-top: 1%;" class="valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1">
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
-				<h6 style="display: inline-block">Questionário de Impacto no Assoalho Pélvico</h6>
+			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
+				<h6 style="display: inline-block; color: white; font-size: 48px; font-family: 'Exo 2-Medium';">Questionário de Impacto no Assoalho Pélvico</h6>
 				<img src="../assets/icon_upload.png" style="width: 9%; margin-top: 1%;" class="valign-text-middle exo2-bold-white-16px modal-trigger">
 			</div>
 		</div>
@@ -111,6 +116,6 @@
 		</nav>
 	</footer>
 </div>
-<!--fim do menu inferior-->  
+<!--fim do menu inferior--> 
 <script type="text/javascript" src="../js/main.js"></script>
 </html>
