--- a/src formulario aplicar/forms_Aplicar_Espondilete2.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete2.html
@@ -13,13 +13,23 @@
 	<title>InovaForms</title>
 </head>
 <body>
-	<div class="row">
+		<!--inicio título-->
 		<nav id="barra-status">
-		<a href="forms_Aplicar_Espondilete.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
-		<div id="titulo">Formulários</div>
-		<div id="titulo"><h1>Aplicar</h1></div>
-		</nav>
+			<div class="row">
+			<div class="col s1" style="display: flex; flex-direction: column; align-items: flex-start; margin-left: -10%;">
+		<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn" style="background-color: rgba(0, 0, 0, 0);"><i class="material-icons center">chevron_left</i></a>
 	</div>
+	<div class="col s12 center-align">
+		<div id="titulo">Formulários</div>
+	</div>	
+	</div>
+	<div class="row">
+		<div class="col s12 center-align">
+			<div id="titulo" style="font-size: 55px;">Aplicar</div>
+		</div>
+	</div>
+	</nav>
+		<!--fim título-->
 	<div class="container">
 		<div class="row">
 
