--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -13,12 +13,23 @@
 	<title>InovaForms</title>
 </head>
 <body>
-		<nav id="barra-status">
-		<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a> 
-		<div id="titulo">Formulários</div>
-		<div id="titulo"><h5>Visualizar</h5></div>
-		</nav>
-
+			<!--inicio título-->
+	<nav id="barra-status">
+		<div class="row">
+		<div class="col s1" style="display: flex; flex-direction: column; align-items: flex-start; margin-left: -10%;">
+	<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn" style="background-color: rgba(0, 0, 0, 0);"><i class="material-icons center">chevron_left</i></a>
+</div>
+<div class="col s12 center-align">
+	<div id="titulo">Formulários</div>
+</div>	
+</div>
+<div class="row">
+	<div class="col s12 center-align">
+		<div id="titulo" style="font-size: 55px;">Visualizar</div>
+	</div>
+</div>
+</nav>
+	<!--fim título-->
 	<!--inicio do menu inferior-->
 	<div class="footer-fixed">
 		<footer >
