--- a/formulario.html
+++ b/formulario.html
@@ -13,12 +13,18 @@
 	<title>InovaForms</title>
 </head>
 <body>
-	<div class="row">
+	
 		<nav id="barra-status">
-		<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons center">chevron_left</i></a>
-		<div id="titulo">Formulários</div>
-		</nav>
+			<div class="row">
+			<div class="col s1" style="display: flex; flex-direction: column; align-items: flex-start; margin-left: -10%;">
+		<a href="index.html" class="waves-effect waves-light btn" style="background-color: rgba(0, 0, 0, 0);"><i class="material-icons center">chevron_left</i></a>
 	</div>
+	<div class="col s12 center-align">
+		<div id="titulo">Formulários</div>
+	</div>	
+</div>
+</nav>
+	
 	
 	<!--inicio do menu inferior-->
 	<div class="footer-fixed">
