--- a/src formulario concluido/forms_respostas.html
+++ b/src formulario concluido/forms_respostas.html
@@ -28,54 +28,65 @@
 </div>
 </nav>
 	<!--fim título-->
+	<div class="container">
  <div class="row">
 	  	<div class="col s12">
-	  		<h6>Questionário de Impacto no Assoalho Pélvico</h6>
+			<h2 style="color: #30566B; margin-top: 2%; margin-bottom: 5%;">Questionário de Impacto no Assoalho Pélvico</h2>
 	  		<div class="row linha" id="botoes">
 	  			<div class="col s6 center-align">
-	  				<button id="meubotao1" class="button-verde" >Respostas</button>
+	  				<button id="meubotao1" class="button-cinza" >Respostas</button>
 	  			</div>
 	  			<div class="col s6 center-align">
-	  				<button id="meubotao2" class="button-cinza">Resultados</button>
+	  				<button id="meubotao2" class="button-verde">Resultados</button>
 	  			</div>
 	  		</div>
 	  	</div>
 	  </div>
 		<div class="row">
 
-			<div class="col s12">
-				<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
-			</div>
+	
 
 			<div class="col s12 ">
-				<p><b>Paciente:</b>Dávila Fernandes</p>
+				<p style="font-size: 35px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"><b style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-style: bold;
+					font-family: 'Exo 2-Semi';
+					text-align: left;
+					padding: 24px 0;">Paciente:</b> Dávila Fernandes</p>
 			</div>
 
 			<div class="col s6 ">
-				<p><b>Data de aplicação:</b>09/03/2021</p>
+				<p style="font-size: 35px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"><b style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-style: bold;
+					font-family: 'Exo 2-Semi';
+					text-align: left;
+					padding: 24px 0;">Data de aplicação:</b>09/03/2021</p>
 			</div>
 
 			<div class="col s12 ">
-				<p><b>Local:</b>Hospital Geral de Fortaleza</p>
+				<p style="font-size: 35px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"><b style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-style: bold;
+					font-family: 'Exo 2-Semi';
+					text-align: left;
+					padding: 24px 0;">Local:</b>Hospital Geral de Fortaleza</p>
 			</div>
 
 			<div class="col s12 ">
-				<p><b>Explicação do resultado:</b>Não há resultados.</p>
+				<p style="font-size: 35px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"><b style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-style: bold;
+					font-family: 'Exo 2-Semi';
+					text-align: left;
+					padding: 24px 0;">Explicação do resultado:</b>Não há resultados.</p>
 			</div>
 		</div>
 		<div class="col s12">
 
-			<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 100px; display: inline-block;
+			<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 150px; display: inline-block;
 			margin-left: auto;
-			margin-right: auto;">Excluir questionário</button>
-			<button class="  avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
+			margin-right: auto;border-style:double; border-color: #30566B; background-color: white; color: #30566B;">Excluir questionário</button>
+			<button class="  avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 150px; display: inline-block;
 			margin-left: auto;
-			margin-right: auto;">Visualizar pacientes</button>
+			margin-right: auto;">Visualizar paciente</button>
 
 		</div>
-
+</div>
 		<!--inicio modal de excluir formulário-->
-		<!-- Modal Structure -->
+		<!-- Modal Structure --> 
 		<div id="modal1" class="modal">
 			<div class="modal-content">
 				<h6>Deseja excluir o formulário “Questionário de Impacto no Assoalho Pélvico”?</h6>
