--- a/src formulario visualizar/forms_editar_respostas.html
+++ b/src formulario visualizar/forms_editar_respostas.html
@@ -27,10 +27,11 @@
 </div>
 </div>
 </nav>
-<!--fim título-->
+<!--fim título-->	  		<div class="container">
+
  <div class="row">
 	  	<div class="col s12">
-	  		<h6>Questionário de Impacto no Assoalho Pélvico</h6>
+			<h2 style="color: #30566B; margin-top: 2%; margin-bottom: 5%;">Questionário de Impacto no Assoalho Pélvico</h2>
 	  		<div class="row linha" id="botoes">
 	  			<div class="col s6 center-align">
 	  				<button id="meubotao1" class="button-verde">Respostas</button>
@@ -39,12 +40,10 @@
 	  				<button id="meubotao2" class="button-cinza">Resultados</button>
 	  			</div>
 	  		</div>
-	  		<div class="container">
-	  			<div class="row">
 
-	  				<div class="col s12">
-	  					<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
-	  				</div>
+		  </div>
+ </div>
+	  			<div class="row">
 
 	  				<div class="col s12">
 	  					<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Condições ou sintomas que afetam o paciente em relação a:</h6>
@@ -81,7 +80,7 @@
 
 				<a href="forms_respostas_pelvica.html" ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
 				margin-left: auto;
-				margin-right: auto;">Cancelar</button></a>
+				margin-right: auto; border-style:double; border-color: #30566B; background-color: white; color: #30566B;">Cancelar</button></a>
 
 				<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 100px; display: inline-block;
 				margin-left: auto;
