--- a/src formulario visualizar/forms_respostas_pelvica.html
+++ b/src formulario visualizar/forms_respostas_pelvica.html
@@ -28,9 +28,10 @@
 </div>
 </nav>
 	<!--fim título-->
+	<div class="container">
 	<div class="row">
 		<div class="col s12">
-			<h6>Questionário de Impacto no Assoalho Pélvico</h6>
+			<h2 style="color: #30566B; margin-top: 2%; margin-bottom: 5%;">Questionário de Impacto no Assoalho Pélvico</h2>
 			<div class="row linha">
 				<div class="col s6 center-align">
 					<button class="button-verde" id="meubotao1">Respostas</button>
@@ -41,12 +42,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
-		<div class="row">
 
-			<div class="col s12">
-				<h2 style="color: #30566B; margin-top: 0px; margin-bottom: 0px;">Questionário de Impacto no Assoalho Pélvico</h2>
-			</div>
+		<div class="row">
 
 			<div class="col s12">
 				<h6 style="font-size: 40px; color: #323B43; margin-bottom: 16px;">Condições ou sintomas que afetam o paciente em relação a:</h6>
@@ -81,7 +78,7 @@
 			<div class="col s12">
 				<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 100px; display: inline-block;
 				margin-left: auto;
-				margin-right: auto;">Excluir questionário</button>
+				margin-right: auto; border-style:double; border-color: #30566B; background-color: white; color: #30566B;">Excluir questionário</button>
 
 				<a href="forms_editar_respostas.html" ><button  class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
 				margin-left: auto;
