--- a/src formulario concluido/forms_respostas.html
+++ b/src formulario concluido/forms_respostas.html
@@ -18,7 +18,7 @@
 		<div id="titulo"><h5>Visualizar</h5></div>
 		</nav>
 	</div>
- <div class="row">
+ 	<div class="row">
 	  	<div class="col s12">
 	  		<h6>Questionário de Impacto no Assoalho Pélvico</h6>
 	  		<div class="row linha" id="botoes">
@@ -58,9 +58,9 @@
 			<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 100px; display: inline-block;
 			margin-left: auto;
 			margin-right: auto;">Excluir questionário</button>
-			<button class="  avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
+			<a href="../pacientes/pacientes.html"><button class="  avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
 			margin-left: auto;
-			margin-right: auto;">Visualizar pacientes</button>
+			margin-right: auto;">Visualizar pacientes</button></a>
 
 		</div>
 
