--- a/src formulario visualizar/forms_visualizar.html
+++ b/src formulario visualizar/forms_visualizar.html
@@ -24,7 +24,7 @@
 			<div class="col s6 barra-busca">
 				<h6>Busca por área</h6>
 					<div class="input-field col s12">
-						<select >
+						<select id="select1">
 							<option value="" disabled selected>Toque para ver filtros</option>
 							<option value="1">Área</option>
 							<option value="2">Data de aplicação</option>
