--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -2,13 +2,12 @@
 <html>
 <head>
 	<link rel="icon" href="imgs/favicon.png" type="image/x-icon" />
-	<script src="js/jquery-3.5.0.min.js"></script>
+	<script src="../js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
-	<script  src="js/main.js"></script>
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
