--- a/src formulario visualizar/forms_respostas_pelvica.html
+++ b/src formulario visualizar/forms_respostas_pelvica.html
@@ -88,37 +88,42 @@
 	</div>
 
 	<!--inicio modal de excluir formulário-->
-	<!-- Modal Structure -->
-	<div id="modal1" class="modal">
-		<div class="modal-content">
-			<h6>Deseja excluir o formulário “Questionário de Impacto no Assoalho Pélvico”?</h6>
-		</div>
-		<div class="modal-footer">
-			<button class=" modal-close avanar valign-text-middle exo2-bold-white-16px" href="#!" style="margin-top: 100px; display: inline-block;
-			margin-left: auto;
-			margin-right: auto;">Cancelar</button>
-
-			<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 100px; display: inline-block;
-			margin-left: auto;
-			margin-right: auto;">Excluir</button>
-		</div>
+		<!-- Modal Structure --> 
+		<div id="modal1" class="modal" style="background-color: #30566B;">
+			<div class="modal-content">
+				<h6 style="color: white;">Deseja excluir o formulário “Questionário de Impacto no Assoalho Pélvico”?</h6>
+			</div>
+				<div class="row" style="background-color: #30566B;">		
+					<div class="modal-footer" style="background-color: #30566B;">
+						<div class="col s5">
+				<button class=" modal-close avanar valign-text-middle exo2-bold-white-16px" href="#!" style="display: inline-block;
+				margin-left: auto;
+				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: #5ABBE5;">Cancelar</button>
+</div>
+<div class="col s5">
+				<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+				margin-left: auto;
+				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: right;">Excluir</button>
+</div>		</div>	
 	</div>
-	<!--fim modal de excluir formulario-->
+		</div>
+		<!--fim modal de excluir formulario-->
 
-	<!--inicio modal de confirmar exclusão-->
-	<!-- Modal Structure -->
-	<div id="modal2" class="modal">
-		<div class="modal-content" style="background-color: #30566B;">
-			<img src="../assets/icon_confirma.png">
-			<h6 style="color: white;">O formulário “Questionário de Impacto no Assoalho Pélvico” foi excluído com sucesso</h6>
+		<!--inicio modal de confirmar exclusão-->
+		<!-- Modal Structure -->
+		<div id="modal2" class="modal">
+			<div class="modal-content" style="background-color: #30566B;">
+				<img src="../assets/icon_confirma.png">
+				<h6 style="color: white;">O formulário “Questionário de Impacto no Assoalho Pélvico” foi excluído com sucesso</h6>
+			</div>
+			<div class="modal-footer" style="background-color: #30566B;">
+				
+				<a href="../src formulario visualizar/forms_visualizar.html"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
+			
+			</div>
 		</div>
-		<div class="modal-footer">
-			<a href="forms_visualizar.html"><button class=" avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
-			margin-left: auto;
-			margin-right: auto;">Concluir</button></a>
-		</div>
-	</div>
-	<!--fim modal de confirmar exclusão-->
+		<!--fim modal de confirmar exclusão-->
 
 </body>
 <!--inicio do menu inferior-->
