--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
 	  	<div class="row" id="container2">
 
 	  	<div class="col s12 ">
+			<a href="ajuda.html">
 			<div class=" div-sombra col s5 center-align z-depth-2 shadow-demo  menu-baixo">
 				<img class="responsive-img" src="assets/ajuda.png" >
 				<h5 class="textobotao">Ajuda</h5>
-			</div>
+			</a></div>
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
+			<a href="sobre.html">
 	      	<img class="responsive-img" src="assets/sobre.png" >
 	      	<h5 class="textobotao">Sobre</h5>
+			  </a>
 	      </div>
 	  	</div>
 	  </div>
