--- a/src formulario concluido/forms_respostas.html
+++ b/src formulario concluido/forms_respostas.html
@@ -116,7 +116,7 @@
 			</div>
 			<div class="modal-footer" style="background-color: #30566B;">
 				
-				<a href="../src formulario visualizar/forms_visualizar.html"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+				<a href="#!"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
 					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
 			
 			</div>
@@ -129,16 +129,16 @@
 		<nav class="z-depth-0 nav-menu">
 			<div class="nav-wrapper">
 				<ul class="justify">
-					<li><a href="../index.html"><img src="../assets/icon-home.png" class="img-icon" ></a></li>
-					<li><a href="../formulario.html"><img src="../assets/icon_forms.png" class="img-icon"></a></li>
-					<li><a class="active" href="#test3"><img src="../assets/icon_paciente.png" class="img-icon"></a></li>
-					<li><a href="#!"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
-					<li><a href="#!"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
+					<li><a href="index.html"><img src="assets/icon-home.png" class="img-icon" ></a></li>
+					<li><a href="formulario.html"><img src="assets/icon_forms.png" class="img-icon"></a></li>
+					<li><a class="active" href="#test3"><img src="assets/icon_paciente.png" class="img-icon"></a></li>
+					<li><a href="ajuda.html"><img src="assets/icon_ajuda.png" class="img-icon"></a></li>
+					<li><a href="sobre.html"><img src="assets/icon_sobre.png" class="img-icon"></a></li>
 				</ul>
 			</div>
 		</nav>
 	</footer>
 </div>
-<!--fim do menu inferior-->  
+<!--fim do menu inferior-->
 <script type="text/javascript" src="../js/main.js"></script>
 </html>
