--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	  </div>
 
 	  	<div class="row">
-			<a href=""><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
+			<a href="pacientes/pacientes.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
 				<div class="col s4 ">
 					<img class="imagens responsive-img left-align" style="display: block;
 					margin-left: auto;
