--- a/src formulario visualizar/forms_editar_respostas.html
+++ b/src formulario visualizar/forms_editar_respostas.html
@@ -90,23 +90,43 @@
 		</div>
 	</div>
 
-			<!--inicio modal de salvar as alterações-->
-				<!-- Modal Structure -->
-				<div id="modal1" class="modal">
-					<div class="modal-content">
-						<h6>Deseja salvar as alterações realizadas?</h6>
-					</div>
-					<div class="modal-footer">
-						<button class=" modal-close avanar valign-text-middle exo2-bold-white-16px" href="#!" style="margin-top: 100px; display: inline-block;
-						margin-left: auto;
-						margin-right: auto;">Cancelar</button>
+			<!--inicio modal de excluir formulário-->
+		<!-- Modal Structure --> 
+		<div id="modal1" class="modal" style="background-color: #30566B;">
+			<div class="modal-content">
+				<h6 style="color: white;">Deseja salvar as alterações realizadas?</h6>
+			</div>
+				<div class="row" style="background-color: #30566B;">		
+					<div class="modal-footer" style="background-color: #30566B;">
+						<div class="col s5">
+				<button class=" modal-close avanar valign-text-middle exo2-bold-white-16px" href="#!" style="display: inline-block;
+				margin-left: auto;
+				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: #5ABBE5;">Cancelar</button>
+</div>
+<div class="col s5">
+				<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+				margin-left: auto;
+				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: right;">Alterar</button>
+</div>		</div>	
+	</div>
+		</div>
+		<!--fim modal de excluir formulario-->
 
-						<a href="forms_respostas_pelvica.html"><button class=" avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
-						margin-left: auto;
-						margin-right: auto;">Salvar Alterações</button></a>
-					</div>
-				</div>
-			<!--fim modal de salvar as alterações-->
+		<!--inicio modal de confirmar exclusão-->
+		<!-- Modal Structure -->
+		<div id="modal2" class="modal">
+			<div class="modal-content" style="background-color: #30566B;">
+				<img src="../assets/icon_confirma.png">
+				<h6 style="color: white;">As alterações foram salvas com sucesso.</h6>
+			</div>
+			<div class="modal-footer" style="background-color: #30566B;">
+				
+				<a href="#!"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
+			
+			</div>
+		</div>
+		<!--fim modal de confirmar exclusão-->
 </body>
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
