--- a/pacientes/pacientes_formulario.html
+++ b/pacientes/pacientes_formulario.html
@@ -47,15 +47,15 @@
 		</div>
 	</div>
 
-	<!--inicio categorias-->
-	  	<div class="row">
+<!--inicio categorias-->
+	  	<a href="../src formulario visualizar/forms_respostas_pelvica.html"><div class="row">
 	  		<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #5ABBE5;">
 	  			<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
 	  			top: 40%;
 	  			transform: translateY(-40%); font-size: 50px; color:white;">Questionário de Impacto no Assoalho Pélvico</h6>
+	  			<img src="../assets/icon_prosseguir.png">
 	  		</div>
-	  	</div>
-	  </div>
+	  	</div></a>
 	  <!--fim categorias-->
 	  <!--inicio do menu inferior-->
 	  <div class="footer-fixed">
@@ -74,6 +74,22 @@
 	  	</footer>
 	  </div>
 	  <!--fim do menu inferior-->
-	  <script type="text/javascript" src="../js/main.js"></script>
-</body>  
+</body>
+<script type="text/javascript" src="../js/main.js"></script>
+
+<script type="text/javascript">
+	let buttonClick3 = document.getElementById('meubotao3'); //O botao criado deve ter o campo id="meubotao"
+	let buttonClick4 = document.getElementById('meubotao4');
+
+	console.log(buttonClick3);
+	buttonClick3.addEventListener("click",function(event){
+	    window.location.href = "../pacientes/pacientes_visualizar.html";
+	    console.log("Tentei redirecionar!!!");
+	});
+	console.log(buttonClick4);
+	buttonClick4.addEventListener("click",function(event){
+	    window.location.href = "../pacientes/pacientes_formulario.html";
+	    console.log("Tentei redirecionar!!!");
+	});
+</script>  
 </html>
