--- a/src formulario visualizar/forms_respostas_pelvica.html
+++ b/src formulario visualizar/forms_respostas_pelvica.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="modal-footer" style="background-color: #30566B;">
 				
-				<a href="../src formulario visualizar/forms_visualizar.html"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+				<a href="../src formulario visualizar/forms_visualizar.html"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" style="margin-top: 0px; display: inline-block;
 					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
 			
 			</div>
