--- a/src formulario visualizar/forms_upload.html
+++ b/src formulario visualizar/forms_upload.html
@@ -49,9 +49,9 @@
 				<a class="waves-effect waves-light btn"style="position:relative !important;
 				top: 85%;
 				transform: translateY(-85%); border-radius: 10px; height: 50px;"><img class="material-icons left" src="../assets/filter.svg" style="width: 200%;
-    top: 50%; 
-    left: 50%;
-    transform: translate(-50%, -50%);"></a>
+    			top: 50%; 
+    			left: 50%;
+    			transform: translate(-50%, -50%);"></a>
 			</div>
 		</div>
 		<!--fim barra de pesquisa-->
@@ -72,7 +72,7 @@
 		<div class="row">
 			<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
 				<h6 style="display: inline-block; color: white; font-size: 48px; font-family: 'Exo 2-Medium';">Questionário de Impacto no Assoalho Pélvico</h6>
-				<img src="../assets/icon_upload.png" style="width: 9%; margin-top: 1%;" class="valign-text-middle exo2-bold-white-16px modal-trigger">
+				<img src="../assets/icon_upload.png" style="width: 9%; margin-top: 1%;" class="valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1">
 			</div>
 		</div>
 		<!--fim categorias-->
@@ -108,7 +108,7 @@
 			</div>
 			<div class="modal-footer" style="background-color: #30566B;">
 				
-				<a href="#!"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+				<a href="#!"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" style="margin-top: 0px; display: inline-block;
 					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
 			
 			</div>
