--- a/src formulario visualizar/forms_editar_respostas.html
+++ b/src formulario visualizar/forms_editar_respostas.html
@@ -104,29 +104,14 @@
 				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: #5ABBE5;">Cancelar</button>
 </div>
 <div class="col s5">
-				<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+				<a href="forms_respostas_pelvica.html"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
 				margin-left: auto;
-				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: right;">Alterar</button>
+				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: right;">Salvar Alterações</button></a>
 </div>		</div>	
 	</div>
 		</div>
 		<!--fim modal de excluir formulario-->
-
-		<!--inicio modal de confirmar exclusão-->
-		<!-- Modal Structure -->
-		<div id="modal2" class="modal">
-			<div class="modal-content" style="background-color: #30566B;">
-				<img src="../assets/icon_confirma.png">
-				<h6 style="color: white;">As alterações foram salvas com sucesso.</h6>
-			</div>
-			<div class="modal-footer" style="background-color: #30566B;">
-				
-				<a href="#!"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
-					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
-			
-			</div>
-		</div>
-		<!--fim modal de confirmar exclusão-->
+		
 </body>
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
