--- a/login.html
+++ b/login.html
@@ -19,16 +19,17 @@
                 <img src="assets/logo.png" style="display: block;
                 margin-left: auto;
                 margin-right: auto; position:relative !important;
-  margin-top: 5%; width: 80%; height: auto; margin-bottom: 8%;
+  margin-top: 5%; width: 100%; height: auto; margin-bottom: 8%;
    ">
             </div>
         </div>
         <div class="row">
             <div class="col s12">
+                <a href="cadastro.html"> 
                 <h7 style="display: block;
                 margin-left: auto;
-                margin-right: auto; position:relative !important; text-align: center; font-size: 35px; font-family: 'Exo 2-Semi'; color: #323B43;">Não tem uma conta? Cadastre-se</h7> 
-            
+                margin-right: auto; position:relative !important; text-align: center; font-size: 40px; font-family: 'Exo 2-Semi'; color: #323B43;">Não tem uma conta? Cadastre-se</h7> 
+            </a>
             </div>
         </div>
     <div class="row linha" id="botoes" style="margin-top: 8%;">
@@ -36,8 +37,41 @@
             <button id="meubotao1" class="button-verde">Login</button>
         </div>
         <div class="col s6 center-align">
-            <button id="meubotao2" class="button-cinza" onclick="window.location.href = 'cadastro.html'">Cadastro</button>
+            <button id="meubotao2" class="button-cinza" onclick="window.location.href = 'cadastro.html'">Cadastrar</button>
         </div>
     </div>
+    <div class="row">
+    <form>
+        <div class="col s12" style="margin-top: 5%;">
+            <label class="bexiga exo2-semi-bold-tuna-16px">Email</label>
+        </div>
+
+        <div class="col s12" style="margin-top: 5%;">
+            <input class="rectangle-13" type="email" placeholder="DrHenrique@gmail.com" style="font-size: 35px; color:#30566B; font-family: 'Exo 2-Regular'; "></input>
+        </div>
+        <div class="col s12" style="margin-top: 5%;">
+            <label class="bexiga exo2-semi-bold-tuna-16px">Senha</label>
+        </div>
+
+        <div class="col s12" style="margin-top: 5%;">
+            <input class="rectangle-13" type="password" placeholder="********" style="font-size: 35px; color:#30566B; font-family: 'Exo 2-Regular'; "></input>
+        </div> 
+    </form> 
+        </div>
+        <div class="row">
+            <div class="col s12" style="margin-top: 5%;">
+              <a href="#">
+              <h7 style="display: block;
+                margin-left: auto;
+                margin-right: auto; position:relative !important; text-align: center; font-size: 35px; font-family: 'Exo 2-Semi'; color: #323B43;">Esqueceu sua senha?</h7> 
+      </a>  
+    </div>
+        </div>
+        <div class="col s12">
+
+            <a href="index.html" ><button class="avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 15%; display: block;
+              margin-left: auto;
+              margin-right: auto;">Entrar</button></a>
+        </div>
     </div>
     </body>
