--- a/tela_inicial.html
+++ b/tela_inicial.html
@@ -12,11 +12,13 @@
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
-<a href="index.html"><body>
+<a href="apresentacao.html"><body>
     <div class="container" style=" text-align: center;">
     	<img src="assets/simbolo_esquerdo.png" style="position: absolute; left: -44px; top: -48px;">
     	<div class="row">
-    		<h2>Seja bem vind</h2>
+			<div class="col s12">
+    		<h2 style="color: #30566B; font-size: 600%;">Seja bem vindo (a)</h2>
+		</div>
     		<img src="assets/inova_forms.png" style=" width: 100%;height: auto;">
 		</div>
 	</div>	
