--- a/sobre.html
+++ b/sobre.html
@@ -25,11 +25,62 @@
 </div>
 </nav>
 	<!--fim título-->
-    <div class="container">
-    <h6 style="font-size: 75px; text-align: center;">Tela em processo de desenvolvimento</h6>
-
-    <img src="assets/dev.svg" style="width: 800px;margin-top: 15%;">
-</div>	
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<img src="assets/logo.png" style="display: block;
+					margin-left: auto;
+					margin-right: auto; position:relative !important;
+	  width: 100%; height: auto; margin-bottom: 8%;
+	   ">
+				</div>
+			</div>
+</div>
+		 <!--inicio botão sobre-->
+		 <div class="container">
+			<a href="sobre/proposta.html"><div class="row" style="background-color: #5ABBE5; border-radius: 20px;">
+				<div class="col s4 ">
+					<img class="imagens responsive-img left-align" style="display: block;
+					 margin-left: 35%;
+					margin-right: auto; position:relative !important;
+	  margin-top: 10%;width: 60%; height: auto;
+	   " src="assets/logo2.png">
+				</div>
+				<div class="col s2 ">
+					<nav id="barrinha2" style="background-color: white;  padding: 1.5% 3% 175% !important; margin-top: 20%;">
+					</nav>
+				</div>
+				<div class="col s6 ">
+					<h6 style="font-size: 45px;">Proposta do
+						InovaForms</h6>
+					<h7 style="font-size: 30px; font-family: 'Exo 2-Semi';">Informações sobre o desenvolvimento</h7>
+				</div>
+			</div></a>
+		</div>
+		<!--fim botão sobre-->
+  
+		<!--inicio botão membros-->
+		 <div class="container">
+  
+			 <a href="sobre/membros.html"><div class="row" style="background-color: #30566B; border-radius: 20px;">
+				 <div class="col s4 ">
+					 <img class="imagens responsive-img right-align" style="display: block;
+					 margin-left: 20%;
+					 margin-right: auto; position:relative !important;
+	   margin-top: 10%; width: 90%; height: auto;
+		" src="assets/membros.png">
+				 </div>
+				 <div class="col s2 ">
+					 <nav id="barrinha2" style="background-color: white; padding: 1.5% 3% 150% !important; margin-top: 20%;">
+					 </nav>
+				 </div>
+				 <div class="col s6 ">
+					 <h6 style="color: white; font-size: 45px;">Membros</h6>
+					 <h7 style="color: white; font-size: 30px; font-family: 'Exo 2-Regular';">Pessoas que participaram <p>da produção</p></h7>
+				 </div>
+			 </div></a>
+		</div>
+		<!--fim botão membros-->
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
 	<footer >
